Add validation of the regions mentioned in the endpoints